Crash in [@ mozilla::Maybe<T>::emplace<T> | webrtc::videocapturemodule::VideoCaptureAvFoundation::SetTrackingId]
Categories
(Core :: WebRTC: Audio/Video, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| thunderbird_esr102 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox108 | --- | unaffected |
| firefox109 | --- | unaffected |
| firefox110 | --- | verified |
People
(Reporter: aryx, Assigned: pehrsons)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
3 crashes from 2 installations, both macOS Firefox 110.0a1 20230111215657
Crash report: https://crash-stats.mozilla.org/report/index/3e179612-82a1-40aa-9dfa-3234d0230112
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(!isSome())
Top 10 frames of crashing thread:
0 XUL mozilla::Maybe<mozilla::TrackingId>::emplace<mozilla::TrackingId::Source, unsigned int&> mfbt/Maybe.h:844
0 XUL webrtc::videocapturemodule::VideoCaptureAvFoundation::SetTrackingId dom/media/systemservices/objc_video_capture/video_capture_avfoundation.mm:235
1 XUL mozilla::camera::CamerasParent::RecvStartCapture const dom/media/systemservices/CamerasParent.cpp:941
1 XUL std::__1::__invoke<mozilla::camera::CamerasParent::RecvStartCapture /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/type_traits:3747
1 XUL std::__1::__invoke_void_return_wrapper<void>::__call<mozilla::camera::CamerasParent::RecvStartCapture /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/__functional_base:348
1 XUL std::__1::__function::__alloc_func<mozilla::camera::CamerasParent::RecvStartCapture /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/functional:1553
1 XUL std::__1::__function::__func<mozilla::camera::CamerasParent::RecvStartCapture /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/functional:1727
2 XUL std::__1::__function::__value_func<void const /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/functional:1880
2 XUL std::__1::function<void const /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/functional:2555
2 XUL mozilla::camera::VideoEngine::WithEntry dom/media/systemservices/VideoEngine.cpp:242
Updated•3 years ago
|
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Firefox crashes now if you open camera from two tabs at once. I vote we back out bug 1806605 before Monday. This seems bad even for Nightly.
STR:
- Open https://jan-ivar.github.io/dummy/gum_video.html in two tabs, allowing camera in both.
Entire Firefox browser crashes (NOT merely a tab crash).
Comment 3•3 years ago
|
||
Copying crash signatures from duplicate bugs.
Comment 4•3 years ago
|
||
(In reply to Jan-Ivar Bruaroey [:jib] (needinfo? me) from comment #1)
Firefox crashes now if you open camera from two tabs at once. I vote we back out bug 1806605 before Monday. This seems bad even for Nightly.
If it helps, I experienced this by merely switching devices (camer/mic) on a WebRTC call on e.g., https://whereby.com/
| Assignee | ||
Comment 5•3 years ago
|
||
That was a bad assumption. But a simple fix.
| Assignee | ||
Comment 6•3 years ago
|
||
This is a stop-gap fix to handle camera backends being shared across multiple
camera requests. We'll have to follow up with some markers so that the analyzer
extension can understand which tracking ids are sharing which backend.
Updated•3 years ago
|
Comment 8•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 9•3 years ago
|
||
I have reproduced this crash using the test page from comment 1, with an affected Nightly build (2023-01-12). Tested with macOS 11.
The issue is verified as fixed on latest Beta 110.0b3 under macOS 11.
Description
•