Bug 1809860 - In VideoCaptureAvFoundation account for backends being sharable. r=padenot

This is a stop-gap fix to handle camera backends being shared across multiple
camera requests. We'll have to follow up with some markers so that the analyzer
extension can understand which tracking ids are sharing which backend.

Differential Revision: https://phabricator.services.mozilla.com/D166789