dom/media/systemservices/objc_video_capture/video_capture_avfoundation.mm
@@ -231,6 +231,11 @@ int32_t VideoCaptureAvFoundation::OnFrame(webrtc::VideoFrame& aFrame) {
 void VideoCaptureAvFoundation::SetTrackingId(const char* _Nonnull aTrackingId) {
   RTC_DCHECK_RUN_ON(&mChecker);
   MutexLock lock(&api_lock_);
+  if (NS_WARN_IF(mTrackingId.isSome())) {
+    // This capture instance must be shared across multiple camera requests. For now ignore other
+    // requests than the first.
+    return;
+  }
   mTrackingId = Some(nsCString(aTrackingId));
 }
 
